Fixed issues with added BEM

--- a/index.html
+++ b/index.html
@@ -140,28 +140,28 @@
             <div class="section-3-div"><p class="team__name">Игорь Демьяненко</p> <p class="team__text">Product Designer</p> 
                 <ul class="team__soc list">
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -173,28 +173,28 @@
             <div class="section-3-div"><p class="team__name">Ольга Репина</p><p class="team__text">Frontend Developer</p> 
                 <ul class="team__soc list">
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
 
-                    <li class="section-3-soc-item">
-                        <a href="" class="section-3-soc-link link">
+                    <li class="team__soc-item">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -206,28 +206,28 @@
             <div class="section-3-div"><p class="team__name">Николай Тарасов</p><p class="team__text">Marketing</p> 
                 <ul class="team__soc list">
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -239,28 +239,28 @@
             <div class="section-3-div"><p class="team__name">Михаил Ермаков</p><p class="team__text">UI Designer</p> 
                 <ul class="team__soc list">
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
 
                     <li class="team__soc-item">
-                        <a href="" class="section-3-soc-link link">
+                        <a href="" class="team__link link">
                             <svg class="section-3-soc-icon" width="20px" height="20px">
                                 <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
@@ -276,7 +276,7 @@
     <div class="container">
         <h2 class="clients__title">Постоянные клиенты</h2>
         <ul class="clients__list list">
-            <li class="section-4-list-item"><a href="" class="clients__link link">
+            <li class="clients__item"><a href="" class="clients__link link">
                 <svg class="section-4-icon" width="106px" height="60px">
                     <use href="./images/section-4-icons.svg#icon-company1"></use>
                 </svg>
@@ -363,7 +363,7 @@
                     </ul>
         </ul>
         <section class="tg-section">
-        <p class="footer-soc-title footer-title-2">подпишитесь на нашу рассылку</p>
+        <p class="footer__soc-title footer-title-2">подпишитесь на нашу рассылку</p>
         <form class="online-form">
             <input type="text" class="online-input" placeholder="E-mail">
             <div class="last-button">
