--- a/portfolio.html
+++ b/portfolio.html
@@ -88,39 +88,39 @@
 <footer class="footer">
     <div class="container footer-element">
     
-    <address class="footer-stuff">
+    <address class="address">
         <div><a href="./index.html" class="footer-logo footer-element">Web<span class="footer-logo-sep">Studio</span></a>
-        <ul class="list footer-cont">
-        <li class="footer-location"><a href="https://goo.gl/maps/ccbDrzZSvDmgtuJD7"  target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li class="footer-mail"><a href="mailto:info@example.com"></a>info@example.com</li>
-        <li class="footer-tel"><a href="tel:+380991111111"></a>+38 099 111 11 11</li>
+        <ul class="list footer__content">
+        <li class="footer__location"><a href="https://goo.gl/maps/ccbDrzZSvDmgtuJD7"  target="_blank" rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a></li>
+        <li class="footer__mail"><a href="mailto:info@example.com"></a>info@example.com</li>
+        <li class="footer__tel"><a href="tel:+380991111111"></a>+38 099 111 11 11</li>
         </ul></div>
-        <ul class="list footer-soc">
-            <p class="footer-soc-title">присоиденяйтесь</p>
-            <ul class="footer-soc-list list">
-                <li class="section-3-soc-item">
-                    <a href="" class="footer-soc-list-link link">
+        <ul class="list footer__soc">
+            <p class="footer__soc-title">присоиденяйтесь</p>
+            <ul class="footer__soc-list list">
+                <li class="footer__soc-item">
+                    <a href="" class="footer__link link">
                         <svg class="footer-soc-list-icon" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
 
                 <li class="footer-soc-list-item">
-                    <a href="" class="footer-soc-list-link link">
+                    <a href="" class="footer__link link">
                         <svg class="footer-soc-list-icon" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a></li>
 
                 <li class="footer-soc-list-item">
-                    <a href="" class="footer-soc-list-link link">
+                    <a href="" class="footer__link link">
                         <svg class="footer-soc-list-icon" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a></li>
 
                 <li class="footer-soc-list-item">
-                    <a href="" class="footer-soc-list-link link">
+                    <a href="" class="footer__link link">
                         <svg class="footer-soc-list-icon" width="20px" height="20px">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
@@ -128,7 +128,7 @@
                     </ul>
         </ul>
         <section class="tg-section">
-        <p class="footer-soc-title footer-title-2">подпишитесь на нашу рассылку</p>
+        <p class="footer__soc-title footer-title-2">подпишитесь на нашу рассылку</p>
         <form class="online-form">
             <input type="text" class="online-input" placeholder="E-mail">
             <div class="last-button">
